Icon: fix absolute icon paths

QIcon::fromTheme() tries very hard to find an icon in the theme,
even if is an absolute path, like
/usr/share/myapp/foo.svgz, it will search in the current theme an icon
called "foo" which is now what's expected when an abcolute path is
passed.
now when a file:// source or a qrc:// source are passed, build the
QIcon with QIcon(path) instead of QICon::fromTheme(path) so
the actual file is loaded

BUG:498288